open-webui/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress 
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "ai.newto.uk"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: open-webui-svc
            port:
              number: 8080
